--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "build": "strapi build",
     "deploy": "strapi deploy",
+    "deploy:production": "./scripts/deploy-production.sh",
     "develop": "strapi develop",
     "seed:example": "node ./scripts/seed.js",
     "optimize:db": "node ./scripts/optimize-database.js",
+    "optimize:db:force": "FORCE_OPTIMIZE=true node ./scripts/optimize-database.js",
     "test:performance": "node ./scripts/test-performance.js",
     "start": "strapi start",
     "strapi": "strapi"
