--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -8,7 +8,7 @@ on:
       force_optimize:
         description: 'Force database optimization'
         required: false
-        default: 'false'
+        default: false
         type: boolean
 
 jobs:
@@ -23,6 +23,7 @@ jobs:
       DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
       DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
       DATABASE_SSL: ${{ secrets.DATABASE_SSL }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
       
     steps:
     - name: 🔄 Checkout Code
@@ -44,7 +45,12 @@ jobs:
       run: |
         if [ "${{ secrets.ENABLE_DB_BACKUP }}" = "true" ]; then
           echo "Creating database backup..."
-          pg_dump "$DATABASE_URL" > backup_$(date +%Y%m%d_%H%M%S).sql
+          if [ -n "${{ secrets.DATABASE_URL }}" ]; then
+            pg_dump "${{ secrets.DATABASE_URL }}" > backup_$(date +%Y%m%d_%H%M%S).sql
+            echo "Backup created successfully"
+          else
+            echo "DATABASE_URL not provided, skipping backup"
+          fi
         else
           echo "Database backup disabled"
         fi
@@ -53,49 +59,127 @@ jobs:
     - name: 🔧 Apply Database Optimizations
       run: |
         echo "Applying database optimizations..."
+        if [ "${{ github.event.inputs.force_optimize }}" = "true" ]; then
+          echo "Force optimization enabled"
+          export FORCE_OPTIMIZE=true
+        fi
         npm run optimize:db
         
     - name: 🧪 Run Performance Tests
       run: |
         echo "Starting Strapi for testing..."
-        npm start &
+        timeout 300 npm start &
         STRAPI_PID=$!
         
         # Wait for Strapi to start
-        sleep 30
+        echo "Waiting for Strapi to be ready..."
+        for i in {1..60}; do
+          if curl -f -s http://localhost:1337/api/articles > /dev/null 2>&1; then
+            echo "Strapi is ready!"
+            break
+          fi
+          if [ $i -eq 60 ]; then
+            echo "Strapi failed to start within 60 seconds"
+            kill $STRAPI_PID 2>/dev/null || true
+            exit 1
+          fi
+          sleep 1
+        done
         
         # Run performance tests
         npm run test:performance || echo "Performance tests failed but continuing..."
         
         # Stop Strapi
-        kill $STRAPI_PID
+        kill $STRAPI_PID 2>/dev/null || true
+        wait $STRAPI_PID 2>/dev/null || true
       continue-on-error: true
       
     - name: 🚀 Deploy to Server
       run: |
         echo "Deploying to production server..."
-        # Add your deployment commands here
-        # Examples:
-        # - SSH to server and pull latest code
-        # - Build and push Docker image
-        # - Deploy to cloud provider
-        # - Use deployment tools like PM2, Docker Compose, etc.
+        echo "Deployment method: ${{ secrets.DEPLOYMENT_METHOD }}"
+        
+        # Example deployment commands based on deployment method
+        case "${{ secrets.DEPLOYMENT_METHOD }}" in
+          "docker")
+            echo "Building and deploying Docker image..."
+            # docker build -f Dockerfile.production -t strapi-app .
+            # docker push your-registry/strapi-app:latest
+            ;;
+          "ssh")
+            echo "Deploying via SSH..."
+            # Add SSH deployment commands here
+            ;;
+          "cloud")
+            echo "Deploying to cloud provider..."
+            # Add cloud deployment commands here
+            ;;
+          *)
+            echo "No deployment method specified or unknown method"
+            echo "Please set DEPLOYMENT_METHOD secret"
+            ;;
+        esac
         
     - name: ✅ Health Check
       run: |
         echo "Running post-deployment health check..."
-        sleep 10
-        curl -f ${{ secrets.PRODUCTION_URL }}/api/articles || echo "Health check failed"
+        if [ -n "${{ secrets.PRODUCTION_URL }}" ]; then
+          echo "Checking ${{ secrets.PRODUCTION_URL }}/api/articles"
+          sleep 10
+          for i in {1..5}; do
+            if curl -f -s "${{ secrets.PRODUCTION_URL }}/api/articles" > /dev/null; then
+              echo "✅ Health check passed!"
+              break
+            fi
+            if [ $i -eq 5 ]; then
+              echo "⚠️ Health check failed after 5 attempts"
+            else
+              echo "Health check attempt $i failed, retrying in 10 seconds..."
+              sleep 10
+            fi
+          done
+        else
+          echo "PRODUCTION_URL not set, skipping health check"
+        fi
       continue-on-error: true
       
     - name: 📊 Performance Report
       if: always()
       run: |
         echo "Generating performance report..."
-        # You can add Lighthouse CI, performance monitoring, etc.
+        echo "Database optimization status: ${{ job.status }}"
+        echo "Performance tests completed"
+        
+        # You can add additional performance monitoring here:
+        # - Lighthouse CI for frontend performance
+        # - Database query analysis
+        # - Memory usage reports
+        # - Response time benchmarks
         
     - name: 📧 Notify Team
       if: failure()
       run: |
         echo "Deployment failed - notifications would be sent here"
-        # Add Slack, email, or other notification integrations 
+        echo "Failed job: ${{ github.job }}"
+        echo "Failed step: ${{ job.status }}"
+        
+        # Add notification integrations here:
+        # - Slack webhook
+        # - Discord webhook  
+        # - Email notifications
+        # - Microsoft Teams
+        
+        # Example Slack notification (uncomment and configure):
+        # curl -X POST -H 'Content-type: application/json' \
+        #   --data "{\"text\":\"🚨 Deployment failed for ${{ github.repository }} on branch ${{ github.ref_name }}\"}" \
+        #   ${{ secrets.SLACK_WEBHOOK_URL }}
+        
+    - name: 🎉 Success Notification
+      if: success()
+      run: |
+        echo "🎉 Deployment completed successfully!"
+        echo "Repository: ${{ github.repository }}"
+        echo "Branch: ${{ github.ref_name }}"
+        echo "Commit: ${{ github.sha }}"
+        
+        # Add success notifications here if needed 
