--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
-    "build": "strapi build",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 strapi build",
     "deploy": "strapi deploy",
     "deploy:production": "./scripts/deploy-production.sh",
     "develop": "strapi develop",
@@ -37,5 +37,8 @@
   "engines": {
     "node": ">=20.0.0 <=22.x.x",
     "npm": ">=10.0.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
