--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,15 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+
+# Cache Configuration
+CACHE_ENABLED=true
+CACHE_DEBUG=false
+CACHE_MAX_ITEMS=1000
+CACHE_TTL=604800000
+CACHE_SIZE=1073741824
+CACHE_ALLOW_STALE=false
+CACHE_PROVIDER=memory
+CACHE_HEADERS=true
+CACHE_AUTHORIZED_REQUESTS=true
+CACHE_GET_TIMEOUT=500
