--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ CACHE_PROVIDER=memory
 CACHE_HEADERS=true
 CACHE_AUTHORIZED_REQUESTS=true
 CACHE_GET_TIMEOUT=500
+
+# WordPress Import
+STRAPI_API_TOKEN=your_api_token_here
