--- a/package.json
+++ b/package.json
@@ -12,27 +12,43 @@
     "optimize:db": "node ./scripts/optimize-database.js",
     "optimize:db:force": "FORCE_OPTIMIZE=true node ./scripts/optimize-database.js",
     "test:performance": "node ./scripts/test-performance.js",
+    "setup:import": "node ./scripts/setup-import-permissions.js",
+    "import:wordpress": "node ./scripts/wordpress-import.js",
+    "import:wordpress:fixed": "node ./scripts/wordpress-import-fixed.js",
+    "cleanup:all": "node ./scripts/complete-cleanup.js",
+    "cleanup:force": "node ./scripts/force-cleanup.js",
+    "test:images": "node ./scripts/test-image-upload.js",
+    "test:duplicates": "node ./scripts/test-duplicate-upload.js",
+    "debug:upload": "node ./scripts/debug-upload-response.js",
+    "test:webp": "node ./scripts/test-webp-fix.js",
+    "test:import": "node ./scripts/test-single-import.js",
+    "update:timestamps": "node ./scripts/update-timestamps-db.js",
+    "migrate:complete": "node ./scripts/complete-wordpress-migration.js",
     "start": "strapi start",
     "start:production": "NODE_ENV=production strapi start",
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "5.11.0",
     "@strapi/plugin-seo": "^2.0.8",
-    "@strapi/plugin-users-permissions": "5.11.0",
+    "@strapi/plugin-users-permissions": "5.15.0",
     "@strapi/provider-upload-aws-s3": "^5.15.0",
-    "@strapi/strapi": "5.11.0",
+    "@strapi/strapi": "5.15.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "better-sqlite3": "11.3.0",
     "dotenv": "^16.4.7",
+    "form-data": "^4.0.3",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
+    "node-fetch": "^2.7.0",
     "pg": "^8.16.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "slugify": "^1.6.6",
     "strapi-cache": "^1.4.9",
-    "styled-components": "^6.0.0"
+    "styled-components": "^6.0.0",
+    "xml2js": "^0.6.2"
   },
   "engines": {
     "node": ">=20.0.0 <=22.x.x",
