--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "sharp": "^0.34.2",
     "slugify": "^1.6.6",
     "strapi-cache": "^1.4.9",
     "styled-components": "^6.0.0",
