--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   },
   "dependencies": {
     "@strapi/plugin-seo": "^2.0.8",
-    "@strapi/plugin-users-permissions": "5.16.1",
-    "@strapi/provider-upload-aws-s3": "^5.16.1",
-    "@strapi/strapi": "5.16.1",
-    "aws-sdk": "^2.1692.0",
+    "@strapi/plugin-users-permissions": "5.17.0",
+    "@strapi/provider-upload-aws-s3": "^5.17.0",
+    "@strapi/strapi": "5.17.0",
+    "@aws-sdk/client-s3": "^3.600.0",
     "axios": "^1.7.9",
     "better-sqlite3": "11.3.0",
     "dotenv": "^16.4.7",
